--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
             </div>
             </section>
             <section class="about_us" id="about us">
+                <div class="container_6">
+                <div class="about_us_img"></div>
                 <div class="about_us_box">
-                    <h3 class="about_us_box_title">About us</h3>
-                    <p class="about_us_box_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the ore recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                    </p>
-                    <button class="about_us_box_button">Read more</button>
-                </div>
-                <div class="clearfix"></div>
-                </div>
+                        <h3 class="about_us_box_title">About us</h3>
+                        <p class="about_us_box_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the ore recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                        </p>
+                        <button class="about_us_box_button">Read more</button>
+                    </div>
+                    </div>
             </section>
             <section class="price" id="price">
                 <div class="container_3">
